--- a/src/NsisoLauncher/Controls/ServerInfoControl.xaml
+++ b/src/NsisoLauncher/Controls/ServerInfoControl.xaml
@@ -27,6 +27,6 @@
         <iconPacks:PackIconFontAwesome Kind="BullhornSolid" Foreground="White" Opacity="0.8" Margin="0,105,0,0" Width="20" Height="20"/>
         <TextBlock x:Name="serverMotdTextBlock" Margin="25,105,10,0" FontSize="15" Foreground="White" Opacity="0.8" Height="20" TextWrapping="Wrap" />
         <!-- <TextBlock x:Name="serverInfoTextBlock" TextWrapping="NoWrap" FontSize="14" Foreground="White" Opacity="0.6" Text="正在获取服务器信息......" TextAlignment="Center" Margin="105,0,0,0" VerticalAlignment="Center"/> -->
-        <controls:MetroProgressBar  x:Name="serverLoadingBar" VerticalAlignment="Bottom" Height="20" IsIndeterminate="False" Margin="25,0,0,0"/>
+        <controls:MetroProgressBar  x:Name="serverLoadingBar" VerticalAlignment="Bottom" Height="20" Width="400" HorizontalAlignment="Left" IsIndeterminate="False" Margin="25,0,0,0"/>
     </Grid>
 </UserControl>
