--- a/src/NsisoLauncher/MainWindow.xaml
+++ b/src/NsisoLauncher/MainWindow.xaml
@@ -17,7 +17,7 @@
     </controls:MetroWindow.Resources>
     <Grid>
         <Grid x:Name="bgGrid">
-            <Image Source="Resource/bg.jpg" Stretch="UniformToFill"/>
+            <Image x:Name="bgImage" Source="Resource/bg.jpg" Stretch="UniformToFill"/>
         </Grid>
         <MediaElement x:Name="mediaElement" Visibility="Hidden" LoadedBehavior="Manual" MediaEnded="mediaElement_MediaEnded" Grid.ColumnSpan="2"/>
         <Grid x:Name="userGrid" Width="280" HorizontalAlignment="Right">
@@ -65,7 +65,8 @@
                 <TextBlock Text="{DynamicResource String.Mainwindow.Launching}" TextAlignment="Center" Margin="0,10,0,0" Foreground="{DynamicResource WhiteColorBrush}"/>
                 <Button x:Name="cancelLaunchButton" Content="取消启动" Padding="10,0" Margin="0,10,0,0"/>
             </StackPanel>
-            <TextBlock x:Name="launchInfoBlock" Height="20" TextAlignment="Right" Foreground="Gray" VerticalAlignment="Bottom" Margin="10,0"/>
+            <TextBlock x:Name="launchInfoBlock" TextAlignment="Right" Foreground="{DynamicResource WhiteColorBrush}"
+                       VerticalAlignment="Bottom" Background="{DynamicResource AccentColorBrush}"/>
         </Grid>
     </Grid>
 </controls:MetroWindow>
