--- a/src/NsisoLauncher/Resource/Language/zh_CN.xaml
+++ b/src/NsisoLauncher/Resource/Language/zh_CN.xaml
@@ -166,7 +166,7 @@
     <sys:String x:Key="String.Settingwindow.Download.Source">首选下载源</sys:String>
     <sys:String x:Key="String.Settingwindow.Download.Source.Mojang">Mojang官方</sys:String>
     <sys:String x:Key="String.Settingwindow.Download.Source.BMCLAPI">BMCLAPI (bangbang93's minecraft launcher api)</sys:String>
-    <sys:String x:Key="String.Settingwindow.Download.Source.MCBBS">BMCLAPI (MCBBS镜像源)</sys:String>
+    <sys:String x:Key="String.Settingwindow.Download.Source.MCBBS">BMCLAPI (MCBBS镜像源)(推荐)</sys:String>
     <sys:String x:Key="String.Settingwindow.Download.Source.Note">*选择的是首选下载源，部分功能仍依赖于独立下载源。在此感谢BMCLAPI与MCBBS提供大量功能</sys:String>
     <sys:String x:Key="String.Settingwindow.Download.Thread">下载线程设置</sys:String>
     <sys:String x:Key="String.Settingwindow.Download.Thread.Num">下载线程数量(最大10):</sys:String>
